[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Other/HealBeam.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86, 6 )

[node name="HealBeam" type="Area2D"]
script = ExtResource( 1 )

[node name="HealParticles" type="CPUParticles2D" parent="."]
amount = 1000
lifetime = 1.2
lifetime_randomness = 0.1
emission_shape = 2
emission_rect_extents = Vector2( 1, 3.288 )
spread = 2.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.3
color = Color( 0.105882, 0.886275, 0.0666667, 1 )
hue_variation = -0.14
hue_variation_random = 0.45

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 85, 0 )
shape = SubResource( 1 )

[node name="HealTickTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="." to="." method="_on_HealBeam_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_HealBeam_area_exited"]
[connection signal="timeout" from="HealTickTimer" to="." method="_on_HealTickTimer_timeout"]
